--- a/config/api_resources/user.yaml
+++ b/config/api_resources/user.yaml
@@ -1,43 +1,53 @@
+---
 RZ\Roadiz\CoreBundle\Entity\User:
-    collectionOperations: [ ]
-    itemOperations:
+    iri: User
+    shortName: User
+    collectionOperations:
         signup:
             method: 'POST'
-            path: '/signup'
+            path: '/users/signup'
             controller: RZ\Roadiz\UserBundle\Controller\SignupController
+            input: RZ\Roadiz\UserBundle\Api\Dto\UserInput
             openapi_context:
                 summary: Create a new public user
                 description: |
                     Create a new public user. User won't be validated and will not be granted with any role
+
+    itemOperations:
+        information:
+            method: 'GET'
+            read: false
+            path: '/users/me'
+            controller: RZ\Roadiz\UserBundle\Controller\InformationController
+            output: RZ\Roadiz\UserBundle\Api\Dto\UserOutput
+            openapi_context:
+                summary: Get current user (JWT) information
+                description: |
+                    Get current user (JWT) information
         validate:
-            method: 'POST'
-            path: '/validate'
+            method: 'PATCH'
+            path: '/users/{id}/validate'
             controller: RZ\Roadiz\UserBundle\Controller\ValidateController
+            input: RZ\Roadiz\UserBundle\Api\Dto\UserTokenInput
             openapi_context:
                 summary: Validate a public user email
                 description: |
                     Validate a public user email with a unique and temporary token
         password_request:
-            method: 'POST'
-            path: '/password_request'
+            method: 'PATCH'
+            path: '/users/{id}/password_request'
             controller: RZ\Roadiz\UserBundle\Controller\PasswordRequestController
+            input: RZ\Roadiz\UserBundle\Api\Dto\UserPasswordRequestInput
             openapi_context:
                 summary: Request a public user new password
                 description: |
                     Initiate a public user new password request (forgot my password)
         password_reset:
-            method: 'POST'
-            path: '/password_reset'
+            method: 'PATCH'
+            path: '/users/{id}/password_reset'
             controller: RZ\Roadiz\UserBundle\Controller\PasswordResetController
+            input: RZ\Roadiz\UserBundle\Api\Dto\UserPasswordTokenInput
             openapi_context:
                 summary: Reset a public user password
                 description: |
                     Change a public user password against a unique temporary token (forgot my password)
-        information:
-            method: 'GET'
-            path: '/me'
-            controller: RZ\Roadiz\UserBundle\Controller\InformationController
-            openapi_context:
-                summary: Get current user (JWT) information
-                description: |
-                    Get current user (JWT) information
