--- a/config/services.yaml
+++ b/config/services.yaml
@@ -1,9 +1,16 @@
 ---
+parameters:
+    env(USER_PASSWORD_RESET_URL): 'loginResetPage'
+    env(USER_PASSWORD_RESET_EXPIRES_IN): '600'
+
 services:
     # default configuration for services in *this* file
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
+        bind:
+            $passwordResetUrl: '%roadiz_user.password_reset_url%'
+            $passwordResetExpiresIn: '%roadiz_user.password_reset_expires_in%'
 
     RZ\Roadiz\UserBundle\:
         resource: '../src/'
@@ -15,6 +22,4 @@ services:
 
     RZ\Roadiz\UserBundle\Controller\:
         resource: '../src/Controller/'
-        autowire: true
-        autoconfigure: true
         tags: ['controller.service_arguments']
