--- a/config/services.yaml
+++ b/config/services.yaml
@@ -1,7 +1,9 @@
 ---
 parameters:
     env(USER_PASSWORD_RESET_URL): 'loginResetPage'
+    env(USER_VALIDATION_URL): 'http://example.test/my-account/validate'
     env(USER_PASSWORD_RESET_EXPIRES_IN): '600'
+    env(USER_VALIDATION_EXPIRES_IN): '3600'
 
 services:
     # default configuration for services in *this* file
@@ -10,7 +12,11 @@ services:
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
         bind:
             $passwordResetUrl: '%roadiz_user.password_reset_url%'
+            $userValidationUrl: '%roadiz_user.user_validation_url%'
             $passwordResetExpiresIn: '%roadiz_user.password_reset_expires_in%'
+            $userValidationExpiresIn: '%roadiz_user.user_validation_expires_in%'
+            $publicUserRoleName: '%roadiz_user.public_user_role_name%'
+            $emailValidatedRoleName: '%roadiz_user.email_validated_role_name%'
 
     RZ\Roadiz\UserBundle\:
         resource: '../src/'
