--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "roadiz/core-bundle": "*",
         "php-coveralls/php-coveralls": "^2.4",
         "phpstan/phpstan": "^1.5.3",
-        "squizlabs/php_codesniffer": "^3.5"
+        "squizlabs/php_codesniffer": "^3.5",
+        "phpstan/phpstan-doctrine": "^1.3"
     },
     "config": {
         "optimize-autoloader": true,
