--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     "minimum-stability": "dev",
     "require": {
         "php": ">=7.4",
+        "api-platform/core": "^2.7",
         "symfony/framework-bundle": "5.4.*",
         "symfony/rate-limiter": "5.4.*",
         "doctrine/orm": "^2.12.2"
