--- a/phpstan.neon
+++ b/phpstan.neon
@@ -7,18 +7,23 @@ parameters:
         - */bower_components/*
         - */static/*
     ignoreErrors:
-        - '#Doctrine\\Persistence\\ObjectRepository#'
+        - '#Call to an undefined method RZ\\Roadiz\\CoreBundle\\Repository#'
         - '#Call to an undefined method RZ\\Roadiz\\UserBundle\\Repository#'
         - '#Call to an undefined method Doctrine\\Persistence\\ObjectRepository#'
         - '#Call to an undefined method Doctrine\\Persistence\\ObjectManager#'
         - '#Call to an undefined method Doctrine\\ORM\\EntityRepository#'
         - '#Call to an undefined method Symfony\\Component\\Config\\Definition\\Builder\\NodeDefinition::#'
-        # @see https://github.com/phpstan/phpstan/issues/1066
-        - '#Psr\\Cache\\InvalidArgumentException is not subtype of Throwable#'
+        - '#Access to an undefined property Symfony\\Component\\Validator\\Constraint::#'
+        - '#RZ\\Roadiz\\Core\\Entities\\Tag does not have a field named \$translation#'
+        - '#does not have a field named \$node\.home#'
+        - '#does not have a field named \$node\.id#'
+        - '#does not have a field named \$node\.parent#'
+        - '#does not have a field named \$translation#'
         # PHPStan Doctrine does not support ResolveTargetEntityListener
         - '#Property ([a-zA-Z\\\:\$]+) type mapping mismatch: property can contain ([a-zA-Z\\\&\>\<]+)Interface\>?\|null but database expects ([a-zA-Z\\\&\>\<]+)\|null#'
         - '#Property ([a-zA-Z\\\:\$]+) type mapping mismatch: property can contain ([a-zA-Z\\\&\>\<]+)Interface\>? but database expects ([a-zA-Z\\\&\>\<]+)#'
         - '#type mapping mismatch: database can contain array\|bool\|float\|int\|JsonSerializable\|stdClass\|string\|null but property expects array\|null#'
+        - '#Doctrine\\ORM\\Mapping\\GeneratedValue constructor expects#'
 
     reportUnmatchedIgnoredErrors: false
     checkGenericClassInNonGenericObjectType: false
