chore: Cleanup composer.json

--- a/composer.json
+++ b/composer.json
@@ -50,6 +50,7 @@
     },
     "extra": {
         "branch-alias": {
+            "dev-main": "2.0-dev",
             "dev-develop": "2.1-dev"
         }
     }
