--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         "doctrine/orm": "^2.14.1"
     },
     "require-dev": {
-        "roadiz/core-bundle": "2.1-dev",
+        "roadiz/core-bundle": "2.1.x-dev",
         "php-coveralls/php-coveralls": "^2.4",
         "phpstan/phpstan": "^1.5.3",
         "squizlabs/php_codesniffer": "^3.5",
@@ -50,8 +50,8 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-main": "2.0-dev",
-            "dev-develop": "2.1-dev"
+            "dev-main": "2.0.x-dev",
+            "dev-develop": "2.1.x-dev"
         }
     }
 }
